<resources>
    <string name="app_name">PopularMovies</string>
    <string name="movie_poster">Movie-Poster</string>
    <string name="user_rating">User Rating </string>
    <string name="release_date">Released Date</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="movie__detail">Movie Detail</string>
    <string name="no_internet_message">No Internet Connection</string>
    <string name="movie_trailers">Movie Trailers</string>
    <string name="users_review">Users Review</string>
    <string name="no_review_avalable">No review Avalable</string>
    <string name="no_trailers_available">No Trailers Available</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="favorite_detail">Favorite Movie Details</string>
</resources>
